src/app/admin/id-cards/id-card-editor/id-card-editor.component.scss
@import '../../../../sp-colors';
@import '../../../../design-system';
app-id-card-editor {
	:host {
		width: 100%;
		height: 100%;
		overflow: hidden;
	}
	.host {
		-webkit-overflow-scrolling: touch;
		overflow: auto;
		padding: 25px;
		box-sizing: border-box;
		display: flex;
		justify-content: flex-start;
		width: 100%;
		height: 100%;
		background-color: $gray100;
		.start-page-wrapper {
			width: 100%;
		}
		.left {
			width: 417px;
			.card.card__role {
				box-sizing: border-box;
				padding-top: 22px;
				border-radius: 12px;
				font-size: 17px;
				color: #1f195e;
				// box-shadow: 0 5px 20px rgba(0, 0, 0, 0.06);
				background-color: #ffffff;
				// max-height: calc(100vh - 56px);
				// overflow-y: auto;
				.ds-big-title {
					margin: 5px 0;
				}
				.form {
					background-color: $gray050;
					border-radius: 10px;
					padding: 17px;
					display: flex;
					align-items: center;
					margin: 15px 0;
					// min-height: 33px;
					.card {
						display: flex;
						justify-content: space-between;
						width: 100%;
						background-color: #f5f6f8 !important;
						.input-color-container {
							width: 35px;
							height: 35px;
							border-radius: 8px;
							background-color: white;
							border: 1px solid #d4d9e2;
							position: relative;
						}
						.input-color {
							appearance: none;
							background: transparent;
							border: none;
							width: auto;
							cursor: pointer;
							margin: auto;
							position: absolute;
							top: 0;
							bottom: 0;
							left: 0;
							right: 0;
							&::-webkit-color-swatch {
								border-radius: 50%;
								width: 25px;
								height: 25px;
								margin: auto;
								position: absolute;
								top: 0;
								bottom: 0;
								left: 0;
								right: 0;
								border: none;
							}
						}
						.idnumber-form-field {
							width: 130px;
						}
					}
					.groups {
						width: 100%;
						.group {
							margin-top: 10px;
						}
					}
					.icon {
						width: 26px;
						height: 26px;
						display: flex;
						align-items: center;
						justify-content: center;
					}
					.title {
						font-size: 15px;
						color: $navy;
						margin-left: 8px;
						.support-icon {
							cursor: help;
							margin-left: 2px;
						}
					}
					.form-content-container {
						display: flex;
						width: 80%;
						justify-content: space-between;
					}
					.form-content {
						.title {
							@extend .title;
							margin-left: 0;
							font-weight: 600;
							display: flex;
							align-items: center;
						}
						.status-value {
							font-size: 15px;
							margin-top: 4px;
							font-weight: 400;
							//cursor: pointer;
							//text-transform: capitalize;
						}
						.value {
							@extend .status-value;
							color: $blue-gray;
						}
					}
					.label {
						display: flex;
						align-items: center;
					}
				}
				.scrollable {
					max-height: calc(100vh - 110px);
					overflow-y: auto;
					padding: 0 22px;
				}
			}
		}
		.right {
			width: calc(100vw - 686px);
			.main-wrapper {
				width: fit-content;
				margin: auto;
			}
		}
		// }
	}
	.mat-form-field-wrapper,
	.mat-form-field-appearance-legacy .mat-form-field-wrapper {
		padding-bottom: 0 !important;
	}
	.mat-primary .mat-option.mat-selected:not(.mat-option-disabled),
	.mat-option,
	.mat-select-value,
	.mat-form-field.mat-focused.mat-primary .mat-select-arrow {
		@include textSize(14px, normal, $gray500);
	}
	.mat-form-field-infix {
		border-top: 0 !important;
	}
	.mat-form-field-appearance-legacy .mat-form-field-underline,
	.mat-form-field-appearance-legacy .mat-form-field-ripple {
		background-color: transparent !important;
		height: 0;
	}
	.barcode-type-wrapper {
		img {
			margin-right: 10px;
		}
	}
	.barcode-type {
		border-top: 1px solid $gray300;
		padding-top: 10px;
		margin-top: 10px;
	}
}

